--- a/index.hbs
+++ b/index.hbs
@@ -37,6 +37,21 @@ into the {body} of the default.hbs template --}}
 
 </div>
 
+    <div class="!m-20 grid grid-cols-3 gap-10">
+      <div class="!p-20 rounded-lg shadow">
+        <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
+      </div>
+      <div class="!p-20 rounded-lg shadow">
+        <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
+      </div>
+      <div class="!p-20 rounded-lg shadow">
+        <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
+      </div>
+    </div>
+
 {{!-- The main content area --}}
 <main id="site-main" class="site-main outer">
 <div class="inner posts">
