--- a/index.hbs
+++ b/index.hbs
@@ -37,7 +37,7 @@ into the {body} of the default.hbs template --}}
 
 </div>
 
-    <div class="!m-20 grid grid-cols-3 gap-10">
+    <div class="!m-20 grid xl:grid-cols-3 gap-10">
       <div class="!p-20 rounded-lg shadow">
         <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
