--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2069,7 +2069,8 @@ iframe.instagram-media + script + :not([id]) {
     padding-top: 48px;
     padding-bottom: 140px;
     color: #fff;
-    background: color-mod(var(--color-darkgrey) l(-5%));
+   /* background: color-mod(var(--color-darkgrey) l(-5%)); */
+    background: black;
 }
 
 .page-template .site-footer {
