--- a/index.hbs
+++ b/index.hbs
@@ -91,14 +91,12 @@ into the {body} of the default.hbs template --}}
       <img src="./assets/images/alemazung_family.jpg" alt="Portrait" class="object-cover w-full h-full rounded-lg" />
     </div>
     <!-- Right column: Content -->
-    <div>
-      <ul class="space-y-2 text-gray-800">
-        <li>Geboren in Schwäbisch Gmünd mit kamerunischen Wurzeln, Jahrgang 1974</li>
-        <li>Verheiratet, stolzer Vater von drei Kindern</li>
-        <li>Wohnhaft in Lindach</li>
-        <li>Promovierter Sozialwissenschaftler und Referent im höheren Dienst beim Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung</li>
+      <ul class="text-gray-800 flex justify-center h-full flex-col">
+        <li class="!border-b !border-gray-200 !py-10 !my-0">Geboren in Schwäbisch Gmünd mit kamerunischen Wurzeln, Jahrgang 1974</li>
+        <li class="!border-b !border-gray-200 !py-10 !my-0">Verheiratet, stolzer Vater von drei Kindern</li>
+        <li class="!border-b !border-gray-200 !py-10 !my-0">Wohnhaft in Lindach</li>
+        <li class="!py-10 !my-0">Promovierter Sozialwissenschaftler und Referent im höheren Dienst beim Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung</li>
       </ul>
-    </div>
   </div>
 </section>
 
