--- a/index.hbs
+++ b/index.hbs
@@ -72,11 +72,11 @@ into the {body} of the default.hbs template --}}
   </div>
 </div>
 
-<section class="!mb-[280px] px-4 py-12 bg-white rounded-2xl">
-  <div class="lg:w-2/3 !py-42 !pb-[250px] !mx-auto">
+<section class="!mb-[280px] px-4 bg-white rounded-2xl">
+  <div class="lg:w-2/3 lg:!py-42 lg:!pb-[280px] !mx-auto">
     <div class="flex !px-6">
       <span class="content-center !text-8xl font-serif text-gray-400 !mr-8 leading-none">„</span>
-        <blockquote class="flex text-center items-center justify-center !italic !text-4xl/20 lg:!text-6xl/20 text-gray-700 !mb-0 !p-0">
+        <blockquote class="flex text-center items-center justify-center !italic !text-4xl/20 lg:!text-6xl/20 text-gray-700 !my-0 !p-0">
           <span>Führung ist das Privileg, den Menschen zu dienen und&nbsp;nicht das Recht, über sie zu herrschen</span>
         </blockquote>
       <span class="content-center !ml-8 !text-8xl font-serif text-gray-400 ml-4 leading-none">“</span>
