--- a/index.hbs
+++ b/index.hbs
@@ -35,21 +35,21 @@ into the {body} of the default.hbs template --}}
         </div>
     {{/match}}
 
-    <div class="hidden relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-20 xl:grid xl:grid-cols-3 gap-10">
-      <div class="!p-20">
+    <div class="hidden relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 xl:grid xl:grid-cols-3 gap-10">
+      <div class="!p-20 lg:!p-28">
         <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/burgermeisterliches"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+        <a href="/burgermeisterliches"><button class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
       </div>
-      <div class="!p-20">
+      <div class="!p-20 lg:!p-28">
         <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/wissenschaft-und-publikationen"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+        <p>Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
+        <a href="/wissenschaft-und-publikationen"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
       </div>
-      <div class="!p-20">
+      <div class="!p-20 lg:!p-28">
         <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/medien-und-vortrage"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+        <a href="/medien-und-vortrage"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
       </div>
     </div>
 </div>
@@ -73,7 +73,7 @@ into the {body} of the default.hbs template --}}
 </div>
 
 <section class="!mb-[280px] px-4 bg-white rounded-2xl">
-  <div class="lg:w-2/3 lg:!py-42 lg:!pb-[280px] !mx-auto">
+  <div class="lg:w-2/3 lg:!py-42 !pb-[280px] lg:!pb-[300px] !mx-auto">
     <div class="flex !px-6">
       <span class="content-center !text-8xl font-serif text-gray-400 !mr-8 leading-none">„</span>
         <blockquote class="flex text-center items-center justify-center !italic !text-4xl/20 lg:!text-6xl/20 text-gray-700 !my-0 !p-0">
