Fix links with umlauts

--- a/index.hbs
+++ b/index.hbs
@@ -39,7 +39,7 @@ into the {body} of the default.hbs template --}}
       <div class="!p-20 2xl:!p-28">
         <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/burgermeisterliches"><button class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+        <a href="/buergermeisterliches"><button class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
       </div>
       <div class="!p-20 2xl:!p-28">
         <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
@@ -49,7 +49,7 @@ into the {body} of the default.hbs template --}}
       <div class="!p-20 2xl:!p-28">
         <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/medien-und-vortrage"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+        <a href="/medien-und-vortraege"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
       </div>
     </div>
 </div>
@@ -58,7 +58,7 @@ into the {body} of the default.hbs template --}}
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-    <a href="/burgermeisterliches"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+    <a href="/buergermeisterliches"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
   </div>
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
@@ -68,7 +68,7 @@ into the {body} of the default.hbs template --}}
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-    <a href="/medien-und-vortrage"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+    <a href="/medien-und-vortraege"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
   </div>
 </div>
 
