Text align center in header on mobile
prettier on index.hbs

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -449,6 +449,7 @@ production stylesheet in assets/built/screen.css
 .gh-head-menu .nav {
     display: inline-flex;
     align-items: center;
+    text-align: center;
     flex-wrap: wrap;
     gap: 32px;
     list-style: none;
