--- a/index.hbs
+++ b/index.hbs
@@ -1,129 +1,230 @@
 {{!< default}}
-{{!-- The tag above means: insert everything in this file
-into the {body} of the default.hbs template --}}
+{{! The tag above means: insert everything in this file
+into the {body} of the default.hbs template }}
 
-<div class="!z-40 lg:relative !mb-96 lg:!mb-[350px] !h-[90vh] site-header-content outer{{#match @custom.header_style "Left aligned"}} left-aligned{{/match}}{{#unless @custom.show_publication_cover}}{{#match @custom.header_style "Hidden"}} no-content{{/match}}{{/unless}}">
+<div
+  class="!z-40 lg:relative !mb-96 lg:!mb-[350px] !h-[90vh] site-header-content
+  outer{{#match @custom.header_style "Left aligned"}} left-aligned{{/match}}{{#unless @custom.show_publication_cover}}{{#match @custom.header_style "Hidden"}} no-content{{/match}}{{/unless}}"
+>
 
-    {{#if @custom.show_publication_cover}}
-        {{#if @site.cover_image}}
-            {{!-- This is a responsive image, it loads different sizes depending on device
-            https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-            <img class="site-header-cover"
-                srcset="{{img_url @site.cover_image size="s"}} 300w,
+  {{#if @custom.show_publication_cover}}
+    {{#if @site.cover_image}}
+      {{! This is a responsive image, it loads different sizes depending on device
+            https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 }}
+      <img
+        class="site-header-cover"
+        srcset="{{img_url @site.cover_image size="s"}} 300w,
                         {{img_url @site.cover_image size="m"}} 600w,
                         {{img_url @site.cover_image size="l"}} 1000w,
                         {{img_url @site.cover_image size="xl"}} 2000w"
-                sizes="100vw"
-                src="{{img_url @site.cover_image size="xl"}}"
-                alt="{{@site.title}}"
-            />
-        {{/if}}
+        sizes="100vw"
+        src="{{img_url @site.cover_image size="xl"}}"
+        alt="{{@site.title}}"
+      />
     {{/if}}
+  {{/if}}
 
-    {{#match @custom.header_style "!=" "Hidden"}}
-        <div class="site-header-inner !mb-30 xl:!mb-96 inner">
-            {{#match @custom.navigation_layout "Logo on cover"}}
-                {{#if @site.logo}}
-                    <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}">
-                {{else}}
-                    <h1 class="site-title">{{@site.title}}</h1>
-                {{/if}}
-            {{/match}}
-            {{#if @site.description}}
-                <p class="site-description">{{@site.description}}</p>
-            {{/if}}
-        </div>
-    {{/match}}
-
-    <div class="hidden relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 xl:grid xl:grid-cols-3 gap-10">
-      <div class="!p-20 2xl:!p-28">
-        <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/buergermeisterliches"><button class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
-      </div>
-      <div class="!p-20 2xl:!p-28">
-        <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-        <p>Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/wissenschaft-und-publikationen"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
-      </div>
-      <div class="!p-20 2xl:!p-28">
-        <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-        <a href="/medien-und-vortraege"><button  class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
-      </div>
+  {{#match @custom.header_style "!=" "Hidden"}}
+    <div class="site-header-inner !mb-30 xl:!mb-96 inner">
+      {{#match @custom.navigation_layout "Logo on cover"}}
+        {{#if @site.logo}}
+          <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
+        {{else}}
+          <h1 class="site-title">{{@site.title}}</h1>
+        {{/if}}
+      {{/match}}
+      {{#if @site.description}}
+        <p class="site-description">{{@site.description}}</p>
+      {{/if}}
     </div>
+  {{/match}}
+
+  <div
+    class="hidden relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 xl:grid xl:grid-cols-3 gap-10"
+  >
+    <div class="!p-20 2xl:!p-28">
+      <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+        magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
+        ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
+        corporis.</p>
+      <a href="/buergermeisterliches"><button
+          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+        >Mehr</button></a>
+    </div>
+    <div class="!p-20 2xl:!p-28">
+      <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
+      <p>Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta.
+        Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et
+        repellendus corporis.</p>
+      <a href="/wissenschaft-und-publikationen"><button
+          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+        >Mehr</button></a>
+    </div>
+    <div class="!p-20 2xl:!p-28">
+      <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+        magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
+        ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
+        corporis.</p>
+      <a href="/medien-und-vortraege"><button
+          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+        >Mehr</button></a>
+    </div>
+  </div>
 </div>
 
-<div class="!z-50 xl:hidden relative -top-120 xl:absolute shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-10 grid xl:grid-cols-3 gap-10">
+<div
+  class="!z-50 xl:hidden relative -top-120 xl:absolute shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-10 grid xl:grid-cols-3 gap-10"
+>
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-    <a href="/buergermeisterliches"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
+      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
+      corporis.</p>
+    <a href="/buergermeisterliches"><button
+        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
+      >Mehr</button></a>
   </div>
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-    <a href="/wissenschaft-und-publikationen"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
+      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
+      corporis.</p>
+    <a href="/wissenschaft-und-publikationen"><button
+        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
+      >Mehr</button></a>
   </div>
   <div class="!p-10">
     <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus corporis.</p>
-    <a href="/medien-und-vortraege"><button  class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition">Mehr</button></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
+      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
+      corporis.</p>
+    <a href="/medien-und-vortraege"><button
+        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
+      >Mehr</button></a>
   </div>
 </div>
 
 <section class="!mb-[280px] px-4 bg-white rounded-2xl">
   <div class="lg:w-2/3 lg:!py-42 !pb-[280px] lg:!pb-[300px] !mx-auto">
     <div class="flex !px-6">
-      <span class="content-center !text-8xl font-serif text-gray-400 !mr-8 leading-none">„</span>
-        <blockquote class="flex text-center items-center justify-center !italic !text-4xl/20 lg:!text-6xl/20 text-gray-700 !my-0 !p-0">
-          <span>Führung ist das Privileg, den Menschen zu dienen und&nbsp;nicht das Recht, über sie zu herrschen</span>
-        </blockquote>
-      <span class="content-center !ml-8 !text-8xl font-serif text-gray-400 ml-4 leading-none">“</span>
+      <span
+        class="content-center !text-8xl font-serif text-gray-400 !mr-8 leading-none"
+      >„</span>
+      <blockquote
+        class="flex text-center items-center justify-center !italic !text-4xl/20 lg:!text-6xl/20 text-gray-700 !my-0 !p-0"
+      >
+        <span>Führung ist das Privileg, den Menschen zu dienen und&nbsp;nicht
+          das Recht, über sie zu herrschen</span>
+      </blockquote>
+      <span
+        class="content-center !ml-8 !text-8xl font-serif text-gray-400 ml-4 leading-none"
+      >“</span>
     </div>
     <div class="!mt-6 text-center text-gray-400">Dr. Joy A. Alemazung</div>
 
-</div>
+  </div>
   <div class="mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
     <!-- Left column: Image placeholder -->
     <div class="w-full bg-gray-200 rounded-lg flex items-center justify-center">
       <!-- Replace src below with your image -->
-      <img src="./assets/images/alemazung_family.jpg" alt="Portrait" class="object-cover w-full h-full rounded-lg" />
+      <img
+        src="./assets/images/alemazung_family.jpg"
+        alt="Portrait"
+        class="object-cover w-full h-full rounded-lg"
+      />
     </div>
     <!-- Right column: Content -->
-      <ul class="text-gray-800 flex justify-center h-full flex-col">
-        <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-asterisk-icon lucide-asterisk"><path d="M12 6v12"/><path d="M17.196 9 6.804 15"/><path d="m6.804 9 10.392 6"/></svg>
-          Geboren in Schwäbisch Gmünd mit kamerunischen Wurzeln, Jahrgang 1974
-        </li>
-        <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-blend-icon lucide-blend"><circle cx="9" cy="9" r="7"/><circle cx="15" cy="15" r="7"/></svg>
-          Verheiratet, stolzer Vater von drei Kindern
-        </li>
-        <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-house-icon lucide-house"><path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"/><path d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/></svg>
-          Wohnhaft in Lindach
-        </li>
-        <li class="!py-10 !my-0 grid grid-cols-[auto_1fr] gap-x-4">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-school-icon lucide-school"><path d="M14 21v-3a2 2 0 0 0-4 0v3"/><path d="M18 5v16"/><path d="m4 6 7.106-3.79a2 2 0 0 1 1.788 0L20 6"/><path d="m6 11-3.52 2.147a1 1 0 0 0-.48.854V19a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-5a1 1 0 0 0-.48-.853L18 11"/><path d="M6 5v16"/><circle cx="12" cy="9" r="2"/></svg>
-          Promovierter Sozialwissenschaftler und Referent im höheren Dienst beim Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung
-        </li>
-      </ul>
+    <ul class="text-gray-800 flex justify-center h-full flex-col">
+      <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-asterisk-icon lucide-asterisk"
+        ><path d="M12 6v12" /><path d="M17.196 9 6.804 15" /><path
+            d="m6.804 9 10.392 6"
+          /></svg>
+        Geboren in Schwäbisch Gmünd mit kamerunischen Wurzeln, Jahrgang 1974
+      </li>
+      <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-blend-icon lucide-blend"
+        ><circle cx="9" cy="9" r="7" /><circle cx="15" cy="15" r="7" /></svg>
+        Verheiratet, stolzer Vater von drei Kindern
+      </li>
+      <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-house-icon lucide-house"
+        ><path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8" /><path
+            d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
+          /></svg>
+        Wohnhaft in Lindach
+      </li>
+      <li class="!py-10 !my-0 grid grid-cols-[auto_1fr] gap-x-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-school-icon lucide-school"
+        ><path d="M14 21v-3a2 2 0 0 0-4 0v3" /><path d="M18 5v16" /><path
+            d="m4 6 7.106-3.79a2 2 0 0 1 1.788 0L20 6"
+          /><path
+            d="m6 11-3.52 2.147a1 1 0 0 0-.48.854V19a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-5a1 1 0 0 0-.48-.853L18 11"
+          /><path d="M6 5v16" /><circle cx="12" cy="9" r="2" /></svg>
+        Promovierter Sozialwissenschaftler und Referent im höheren Dienst beim
+        Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung
+      </li>
+    </ul>
   </div>
 </section>
 
-{{!-- The main content area --}}
+{{! The main content area }}
 <main id="site-main" class="site-main outer">
-<div class="inner posts">
+  <div class="inner posts">
 
     <div class="post-feed">
-        {{#foreach posts}}
-            {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-            {{> "post-card"}}
-        {{/foreach}}
+      {{#foreach posts}}
+        {{! The tag below includes the markup for each post - partials/post-card.hbs }}
+        {{> "post-card"}}
+      {{/foreach}}
     </div>
 
     {{pagination}}
 
-</div>
+  </div>
 </main>
