Add header-entry-menu partial

--- a/index.hbs
+++ b/index.hbs
@@ -40,73 +40,16 @@ into the {body} of the default.hbs template }}
   {{/match}}
 
   <div
-    class="hidden relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 xl:grid xl:grid-cols-3 gap-10"
+    class="hidden xl:block relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 "
   >
-    <div class="!p-20 2xl:!p-28">
-      <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-        magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-        ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-        corporis.</p>
-      <a href="/buergermeisterliches"><button
-          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
-        >Mehr</button></a>
-    </div>
-    <div class="!p-20 2xl:!p-28">
-      <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-      <p>Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta.
-        Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et
-        repellendus corporis.</p>
-      <a href="/wissenschaft-und-publikationen"><button
-          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
-        >Mehr</button></a>
-    </div>
-    <div class="!p-20 2xl:!p-28">
-      <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-        magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-        ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-        corporis.</p>
-      <a href="/medien-und-vortraege"><button
-          class="!my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
-        >Mehr</button></a>
-    </div>
+    {{> "header-entry-menu" }}
   </div>
 </div>
 
 <div
-  class="!z-50 xl:hidden relative -top-120 xl:absolute shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-10 grid xl:grid-cols-3 gap-10"
+  class="!z-50 xl:hidden relative -top-120 xl:absolute shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-10 grid"
 >
-  <div class="!p-10">
-    <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-      corporis.</p>
-    <a href="/buergermeisterliches"><button
-        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
-      >Mehr</button></a>
-  </div>
-  <div class="!p-10">
-    <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-      corporis.</p>
-    <a href="/wissenschaft-und-publikationen"><button
-        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
-      >Mehr</button></a>
-  </div>
-  <div class="!p-10">
-    <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-      corporis.</p>
-    <a href="/medien-und-vortraege"><button
-        class="px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl !mt-4 hover:bg-[var(--ghost-accent-color)]/80 transition"
-      >Mehr</button></a>
-  </div>
+  {{> "header-entry-menu" }}
 </div>
 
 <section class="!mb-[280px] px-4 bg-white rounded-2xl">
