Style header menu

--- a/partials/header-entry-menu.hbs
+++ b/partials/header-entry-menu.hbs
@@ -1,41 +1,47 @@
-<div class="xl:!grid xl:!grid-cols-3">
-  <div class="!p-10 lg:!p-20 2xl:!p-28">
-    <h2 class="!pt-0 !mt-0">Bürgermeisterliches</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+<!-- filepath: partials/header-entry-menu.hbs -->
+<div class="xl:!grid xl:!grid-cols-3 !p-10 lg:!p-20 2xl:!p-28 xl:!grid-rows-[auto_1fr_auto] gap-x-20">
+  <!-- Column 1 -->
+  <div class="contents !p-10 lg:!p-20 2xl:!p-28">
+    <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-1">Bürgermeisterliches</h2>
+    <p class="xl:row-start-2 xl:col-start-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
       magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
       ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
       corporis.</p>
-    <a href="/buergermeisterliches"><button
-        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+    <a href="/buergermeisterliches" class="xl:row-start-3 xl:col-start-1">
+      <button
+        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
       >Mehr
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
       </button>
     </a>
   </div>
-  <div class="!p-10 lg:!p-20 2xl:!p-28">
-    <h2 class="!pt-0 !mt-0">Wissenschaft und Publikationen</h2>
-    <p>Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta.
+  <!-- Column 2 -->
+  <div class="contents !p-10 lg:!p-20 2xl:!p-28">
+    <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-2">Wissenschaft und Publikationen</h2>
+    <p class="xl:row-start-2 xl:col-start-2">Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta.
       Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et
       repellendus corporis.</p>
-    <a href="/wissenschaft-und-publikationen"><button
-        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+    <a href="/wissenschaft-und-publikationen" class="xl:row-start-3 xl:col-start-2">
+      <button
+        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
       >Mehr
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
       </button>
     </a>
   </div>
-  <div class="!p-10 lg:!p-20 2xl:!p-28">
-    <h2 class="!pt-0 !mt-0">Medien und Vorträge</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
+  <!-- Column 3 -->
+  <div class="contents !p-10 lg:!p-20 2xl:!p-28">
+    <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-3">Medien und Vorträge</h2>
+    <p class="xl:row-start-2 xl:col-start-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
       magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
       ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-    <a href="/medien-und-vortraege"><button
-        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)] rounded-3xl hover:bg-[var(--ghost-accent-color)]/80 transition"
+      corporis.</p>
+    <a href="/medien-und-vortraege" class="xl:row-start-3 xl:col-start-3">
+      <button
+        class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
       >Mehr
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right-icon lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
       </button>
     </a>
   </div>
 </div>
-</div>
-
