Add career info

--- a/index.hbs
+++ b/index.hbs
@@ -156,6 +156,16 @@ into the {body} of the default.hbs template }}
   </div>
 </section>
 
+
+
+<section class="mx-20 xl:!mx-90 !my-90">
+  <h2 class="!text-6xl">Kommunale und internationale Erfahrungen</h2>
+  <div class="card">Zuständig für kommunale Entwicklung und Zusammenarbeit zwischen deutschen und griechischen Kommunen</div>
+  <div>Mehrjährige Erfahrung in kommunaler Entwicklungspolitik, Umsetzung der Agenda 2030 in den Kommunen</div>
+  <div>Senior Berater und Referent für Frieden und Sicherheitspolitik am Global Governance Institute Brüssel, Belgien (www.globalgovernance.eu)</div>
+</div>
+
+
 {{! The main content area }}
 <main id="site-main" class="site-main outer">
   <div class="inner posts">
