--- a/partials/header-entry-menu.hbs
+++ b/partials/header-entry-menu.hbs
@@ -3,10 +3,7 @@
   <!-- Column 1 -->
   <div class="contents !p-10 lg:!p-20 2xl:!p-28">
     <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-1">Bürgermeisterliches</h2>
-    <p class="xl:row-start-2 xl:col-start-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-      corporis.</p>
+    <p class="xl:row-start-2 xl:col-start-1">Dr. Joy A. Alemazung über seine Arbeit und die Schwerpunkte als Bürgermeister von Heubach. Erfahren Sie mehr über aktuelle Projekte und Initiativen.</p>
     <a href="/buergermeisterliches" class="xl:row-start-3 xl:col-start-1">
       <button
         class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
@@ -18,9 +15,7 @@
   <!-- Column 2 -->
   <div class="contents !p-10 lg:!p-20 2xl:!p-28">
     <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-2">Wissenschaft und Publikationen</h2>
-    <p class="xl:row-start-2 xl:col-start-2">Unde maiores magnam dicta commodi obcaecati. Vel quod expedita soluta.
-      Reiciendis est ex voluptatum excepturi amet voluptas? Atque deleniti et
-      repellendus corporis.</p>
+    <p class="xl:row-start-2 xl:col-start-2">Die wissenschaftliche Arbeit von Dr. Joy A. Alemazung – von Büchern und Fachartikeln bis hin zu Interviews. Einblicke in seine Forschung zu Nachhaltigkeit, Migration und internationaler Politik.</p>
     <a href="/wissenschaft-und-publikationen" class="xl:row-start-3 xl:col-start-2">
       <button
         class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
@@ -32,10 +27,7 @@
   <!-- Column 3 -->
   <div class="contents !p-10 lg:!p-20 2xl:!p-28">
     <h2 class="!pt-0 !mt-0 xl:row-start-1 xl:col-start-3">Medien und Vorträge</h2>
-    <p class="xl:row-start-2 xl:col-start-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores
-      magnam dicta commodi obcaecati. Vel quod expedita soluta. Reiciendis est
-      ex voluptatum excepturi amet voluptas? Atque deleniti et repellendus
-      corporis.</p>
+    <p class="xl:row-start-2 xl:col-start-3">Ein Überblick über Dr. Joy A. Alemazungs Auftritte als Experte in Vorträgen, Panels und Medien. Entdecken Sie hier Presseberichte, TV-Interviews und Möglichkeiten für eine Buchungsanfrage.</p>
     <a href="/medien-und-vortraege" class="xl:row-start-3 xl:col-start-3">
       <button
         class="flex gap-x-4 !my-10 px-8 py-2 border bg-[var(--ghost-accent-color)]  hover:bg-[var(--ghost-accent-color)]/80 transition"
